--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="major">
         <h1>Fabien PAITRY</h1>
         <p>
-            Je vous propose un petit quizz sur les themes d'ouverture de quelque chouettes séries
+            Je vous propose un petit quizz sur les themes d'ouverture de quelques chouettes séries
             <br>
             Chaque bonne réponse vous permettera d'en savoir un peu plus sur moi
         </p>
@@ -54,13 +54,13 @@
             </div>
             <div class="gift">
                 <p>
-                    Je m'appel <a href="https://twitter.com/FabienPaitry" target="_blank">Fabien</a>, j'ai 30 ans (je le
-                    vie bien ;-)
+                    Je m'appelle <a href="https://twitter.com/FabienPaitry" target="_blank">Fabien</a>, j'ai 30 ans (je le
+                    vis bien ;-)
                     <br>
-                    J'ai rejoins l'agence de Rennes il y a 10 jours en tant que consultant PHP / Symfony.
+                    J'ai rejoint l'agence de Rennes lundi dernier en tant que consultant PHP / Symfony.
                 </p>
                 <p>
-                    Je suis actuelement en mission chez Ouest France.
+                    Je suis actuellement en mission chez Ouest France.
                 </p>
             </div>
         </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="gift">
                 <p>
-                    J'ai une petite fille de 2 ans et j'attends une petite fille pour la mi-janvier.
+                    J'ai une petite fille de 2 ans et j'attends une deuxième petite fille pour la mi-janvier.
                 </p>
                 <div class="12u$">
                     <img src="media/images/chloe.jpg"/>
@@ -139,7 +139,7 @@
             <div class="gift">
                 <p>Je suis passionné de voile depuis tout petit.
                     Je navigue dès que je le peux et que la météo le permet entre Saint Malo et les Iles anglo normandes
-                    (Jersey, Guernsey, ...).
+                    (Jersey, Guernesey, ...).
                     Si vous passez en Bretagne et que vous voulez faire une petit balade, n'hésitez pas à me contacter !
                 </p>
                 <div class="12u$">
@@ -204,7 +204,7 @@
             <h2>Get in touch</h2>
         </header>
         <p>
-            J'éspère que vous les avez toutes trouvées (au pire un coup d'oeil dans la toolbar ou un petit message sur
+            J'espère que vous les avez toutes trouvées (au pire un coup d'oeil dans la toolbar ou un petit message sur
             Slack et zou).
             <br>
             En tout cas je suis ravi de vous rejoindre et j'éspère pouvoir tous vous rencontrer bientôt.
