--- a/zenika/index.html
+++ b/zenika/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="gift">
                 <p>
-                    J'ai une petite fille de 2 ans et j'attends une deuxième petite fille pour la mi-janvier.
+                    Je suis l'heureux papa d'une petite fille de 2 ans et j'attends une deuxième petite fille pour la mi-janvier.
                 </p>
                 <div class="12u$">
                     <img src="media/images/chloe.jpg"/>
