--- a/zenika/index.html
+++ b/zenika/index.html
@@ -140,7 +140,7 @@
                 <p>Je suis passionné de voile depuis tout petit.
                     Je navigue dès que je le peux et que la météo le permet entre Saint Malo et les Iles anglo normandes
                     (Jersey, Guernesey, ...).
-                    Si vous passez en Bretagne et que vous voulez faire une petite balade, n'hésitez pas à me contacter !
+                    N'hésitez pas à me contacter si vous passez en Bretagne et que vous voulez faire une petite balade !
                 </p>
                 <div class="12u$">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/RJSzkTiPBZo" frameborder="0"
