--- a/zenika/index.html
+++ b/zenika/index.html
@@ -142,7 +142,7 @@
                     (Jersey, Guernesey, ...).
                     N'hésitez pas à me contacter si vous passez en Bretagne et que vous voulez faire une petite balade !
                 </p>
-                <div class="12u$">
+                <div class="12u$ video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/RJSzkTiPBZo" frameborder="0"
                             allowfullscreen></iframe>
                 </div>
@@ -187,7 +187,7 @@
                     <a href="https://fr-fr.facebook.com/radikal.compost.35/" target="_blank">Stay tuned for more
                         Rock'n'Roll</a>
                 </p>
-                <div class="12u$">
+                <div class="12u$ video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/jElyPoSAwfw" frameborder="0"
                             allowfullscreen></iframe>
                 </div>
