Add correct answers on page footer

--- a/zenika/index.html
+++ b/zenika/index.html
@@ -204,8 +204,7 @@
             <h2>Get in touch</h2>
         </header>
         <p>
-            J'espère que vous les avez toutes trouvées (au pire un coup d'oeil dans la toolbar ou un petit message sur
-            Slack et zou).
+            J'espère que vous les avez toutes trouvées.
             <br>
             En tout cas je suis ravi de vous rejoindre et j'éspère pouvoir tous vous rencontrer bientôt.
         </p>
@@ -214,6 +213,11 @@
         </p>
         <p>
             <strong>Fabien</strong>
+        </p>
+        <p>
+            <u>Réponses :</u>
+            <br>
+            <i>Stranger things, Narcos, Vikings, Breaking Bad</i>
         </p>
     </div>
     <footer>
